[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "expense-agent-ai"
version = "0.1.0"
description = "AI-powered expense auditor: categorize transactions, detect policy violations, generate summaries."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Expense Agent", email = "expense-agent@example.com" },
]
keywords = ["anthropic", "claude", "expense", "audit", "ai-agent"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

dependencies = [
  "anthropic>=0.40.0",
  "click>=8.1",
  "rich>=13.0",
  "pandas>=2.0",
  "pyyaml>=6.0",
]

[project.scripts]
expense-agent = "expense_agent.cli:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov",
  "ruff",
  "mypy",
]

[tool.hatch.build.targets.wheel]
packages = ["expense_agent"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
